# bergshamra

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  publish.yml
crates/bergshamra/: Cargo.toml
crates/bergshamra-c14n/src/: exclusive.rs  inclusive.rs
crates/bergshamra-crypto/: Cargo.toml
crates/bergshamra-crypto/src/: cipher.rs  digest.rs  kdf.rs  keyagreement.rs  keytransport.rs  keywrap.rs  lib.rs  sign.rs
crates/bergshamra-dsig/: Cargo.toml
crates/bergshamra-dsig/src/: context.rs  lib.rs  sign.rs  verify.rs
crates/bergshamra-dsig/tests/: hsm_sign_verify.rs
crates/bergshamra-enc/: Cargo.toml
crates/bergshamra-enc/src/: context.rs  decrypt.rs  encrypt.rs
crates/bergshamra-keys/: Cargo.toml
crates/bergshamra-keys/src/: lib.rs  loader.rs  trust.rs  x509.rs
crates/bergshamra-xml/src/: document.rs
crates/bergshamra/examples/: debug_digest.rs
crates/bergshamra/src/: main.rs
docs/adr/: 0002-cid-uri-scheme-skip.md  0003-rng-choice.md  0004-cli-x509-trust-anchor-enforcement.md
hsm-test/: .gitignore  setup.sh  softhsm2.conf
tests/: xmlsec1-shim.py
