[workspace]
members = [
    "crates/bergshamra-core",
    "crates/bergshamra-xml",
    "crates/bergshamra-c14n",
    "crates/bergshamra-crypto",
    "crates/bergshamra-pkcs12",
    "crates/bergshamra-keys",
    "crates/bergshamra-transforms",
    "crates/bergshamra-dsig",
    "crates/bergshamra-enc",
    "crates/bergshamra",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/kushaldas/bergshamra"
readme = "README.md"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
bergshamra-core = { version = "0.4.0", path = "crates/bergshamra-core" }
bergshamra-xml = { version = "0.4.0", path = "crates/bergshamra-xml" }
bergshamra-c14n = { version = "0.4.0", path = "crates/bergshamra-c14n" }
bergshamra-crypto = { version = "0.4.0", path = "crates/bergshamra-crypto" }
bergshamra-keys = { version = "0.4.0", path = "crates/bergshamra-keys" }
bergshamra-transforms = { version = "0.4.0", path = "crates/bergshamra-transforms" }
bergshamra-dsig = { version = "0.4.0", path = "crates/bergshamra-dsig" }
bergshamra-enc = { version = "0.4.0", path = "crates/bergshamra-enc" }
bergshamra-pkcs12 = { version = "0.4.0", path = "crates/bergshamra-pkcs12" }

# XML parsing
uppsala = "0.3.0"

# Cryptography (RustCrypto ecosystem)
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
sha3 = { version = "0.10", features = ["oid"] }
md-5 = { version = "0.10", features = ["oid"] }
ripemd = { version = "0.1", features = ["oid"] }
hmac = "0.12"
digest = "0.10"
rsa = "0.9"
ecdsa = "0.16"
dsa = "0.6"
ml-dsa = { version = "=0.1.0-rc.7", features = ["pkcs8"] }
slh-dsa = "0.2.0-rc.4"
pkcs8-pq = { package = "pkcs8", version = "=0.11.0-rc.11" }
const-oid-pq = { package = "const-oid", version = "0.10.2", features = ["db"] }
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh", "pkcs8"] }
aes = "0.8"
cbc = "0.1"
aes-gcm = "0.10"
des = "0.8"
aes-kw = "0.2"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
signature = "2"
rand = "0.8"

# Key formats
pkcs1 = "0.7"
pkcs8 = { version = "0.10", features = ["encryption", "3des"] }
spki = "0.7"
der = "0.7"
pem-rfc7468 = "0.7"
x509-cert = "0.2"
yasna = { version = "0.5", features = ["std"] }
pkcs5 = { version = "0.7", features = ["sha1-insecure"] }
pbkdf2 = "0.12"
num-bigint-dig = { version = "0.8", features = ["prime"] }
num-traits = "0.2"

# Utilities
base64 = "0.22"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# Shared crypto backend
kryptering = { version = "0.1.0", default-features = false, features = ["legacy", "post-quantum", "pkcs11"] }

# Shared trust/validation infrastructure
tsp-ltv = { version = "0.1.0", default-features = false }
