[package]
name = "bergshamra-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Cryptographic algorithm implementations for Bergshamra XML Security library"

[features]
default = []
legacy-algorithms = ["dep:md-5", "dep:ripemd"]

[dependencies]
bergshamra-core.workspace = true
kryptering.workspace = true
digest.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
md-5 = { workspace = true, optional = true }
ripemd = { workspace = true, optional = true }
hmac.workspace = true
rsa.workspace = true
ecdsa.workspace = true
dsa.workspace = true
ml-dsa.workspace = true
slh-dsa.workspace = true
getrandom.workspace = true
pkcs8-pq.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
p384 = { workspace = true, features = ["ecdsa"] }
p521 = { workspace = true, features = ["ecdsa"] }
aes.workspace = true
cbc.workspace = true
aes-gcm.workspace = true
des.workspace = true
aes-kw.workspace = true
signature.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
hkdf.workspace = true
rand.workspace = true
pkcs1.workspace = true
pkcs8.workspace = true
pbkdf2.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true

[dev-dependencies]
hex = "0.4"
