[package]
name = "bergshamra-dsig"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "XML Digital Signatures for Bergshamra XML Security library"

[dependencies]
bergshamra-core.workspace = true
bergshamra-xml.workspace = true
bergshamra-transforms.workspace = true
bergshamra-keys.workspace = true
bergshamra-c14n.workspace = true
bergshamra-crypto.workspace = true
kryptering.workspace = true
base64.workspace = true
uppsala.workspace = true
x509-cert.workspace = true
der.workspace = true
rsa.workspace = true
dsa.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
bergshamra-c14n.workspace = true
bergshamra-xml.workspace = true
uppsala.workspace = true
