[package]
name = "bergshamra-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Key management for Bergshamra XML Security library"

[dependencies]
bergshamra-core.workspace = true
bergshamra-crypto.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rsa.workspace = true
ecdsa.workspace = true
dsa.workspace = true
ml-dsa.workspace = true
slh-dsa.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
p384 = { workspace = true, features = ["ecdsa"] }
p521 = { workspace = true, features = ["ecdsa"] }
pkcs1.workspace = true
pkcs5.workspace = true
pkcs8.workspace = true
pkcs8-pq.workspace = true
const-oid-pq.workspace = true
spki.workspace = true
der.workspace = true
pem-rfc7468.workspace = true
x509-cert.workspace = true
bergshamra-pkcs12.workspace = true
base64.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
signature.workspace = true
sha1.workspace = true
sha2.workspace = true
digest.workspace = true
md-5.workspace = true
uppsala.workspace = true
tsp-ltv.workspace = true

[dev-dependencies]
rand.workspace = true
